added adaptive for brief

--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -444,7 +444,6 @@ h2,
   -webkit-transition: all .5s;
   -o-transition: all .5s;
   transition: all .5s;
-  padding: 195px 48px 147px 180px;
 }
 
 .newHeader .bigMenu__content {
@@ -611,6 +610,9 @@ h2,
 }
 
 .newHeader .bigMenu__title {
+  -webkit-box-ordinal-group: 6;
+      -ms-flex-order: 5;
+          order: 5;
   position: absolute;
   left: calc((100vw - 1280px) / 2);
   top: 50%;
@@ -4583,10 +4585,8 @@ h2,
 .newBrief__title {
   color: #fff;
   text-align: center;
-  font-size: 48px;
   font-weight: 400;
   line-height: 1.12;
-  margin-bottom: 40px;
 }
 
 .newBrief__row {
@@ -4867,16 +4867,15 @@ h2,
 .newBrief__form__title {
   color: #fff;
   text-align: center;
-  font-size: 18px;
   line-height: 1.5;
-  margin-top: 55px;
 }
 
 .newBrief__form__text {
   color: #746f88;
   text-align: center;
-  margin: 7px 0 50px;
-  font-size: 16px;
+  max-width: 70vw;
+  margin-right: auto;
+  margin-left: auto;
   line-height: 1.5;
 }
 
@@ -4982,7 +4981,6 @@ h2,
 }
 
 .newBrief__form__prices {
-  margin-top: 55px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4993,13 +4991,13 @@ h2,
       -ms-flex-pack: center;
           justify-content: center;
   gap: 80px;
+  margin-bottom: 60px;
 }
 
 .newBrief__form__price {
   width: 270px;
   border-bottom: 1px solid #fff;
   position: relative;
-  margin-bottom: 60px;
 }
 
 .newBrief__form__price label {
@@ -5129,9 +5127,7 @@ h2,
 .newBrief__form__button input {
   background-color: transparent;
   color: #fff;
-  padding: 22px 103px 22px 50px;
   font-weight: bold;
-  font-size: 14px;
   z-index: 3;
   position: relative;
 }
@@ -5156,7 +5152,6 @@ h2,
   content: "";
   display: inline-block;
   height: 100%;
-  width: 63px;
   background-color: rgba(160, 115, 255, 0.52);
   position: absolute;
   right: 0;
@@ -5269,6 +5264,22 @@ h2,
 
   .newHeader .burgerBtn__burger {
     height: calc(35px + 25 * (100vw / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-top: calc(12px + 183 * (100vw / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-bottom: calc(24px + 123 * (100vw / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-left: calc(15px + 165 * (100vw / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-right: calc(15px + 33 * (100vw / 1440));
   }
 
   .newHeader .bigMenu__content .bigNav .menu-item {
@@ -5957,6 +5968,87 @@ h2,
   .newContacts__row:nth-child(3) a {
     font-size: calc(12px + 18 * (100vw / 1440));
   }
+
+  .newBrief {
+    padding-top: calc(90px + 50 * (100vw / 1440));
+  }
+
+  .newBrief {
+    padding-right: calc(15px + 165 * (100vw / 1440));
+    padding-left: calc(15px + 165 * (100vw / 1440));
+  }
+
+  .newBrief {
+    padding-bottom: calc(90px + 57 * (100vw / 1440));
+  }
+
+  .newBrief__title {
+    font-size: calc(24px + 24 * (100vw / 1440));
+  }
+
+  .newBrief__title {
+    margin-bottom: calc(20px + 20 * (100vw / 1440));
+  }
+
+  .newBrief__form__title {
+    font-size: calc(16px + 2 * (100vw / 1440));
+  }
+
+  .newBrief__form__title {
+    margin-top: calc(25px + 30 * (100vw / 1440));
+  }
+
+  .newBrief__form__text {
+    margin-top: calc(0px + 7 * (100vw / 1440));
+  }
+
+  .newBrief__form__text {
+    margin-bottom: calc(25px + 25 * (100vw / 1440));
+  }
+
+  .newBrief__form__text {
+    font-size: calc(12px + 4 * (100vw / 1440));
+  }
+
+  .newBrief__form__checkbox label {
+    font-size: calc(14px + 2 * (100vw / 1440));
+  }
+
+  .newBrief__form__prices {
+    margin-top: calc(30px + 25 * (100vw / 1440));
+  }
+
+  .newBrief__form__textarea {
+    margin-bottom: calc(30px + 20 * (100vw / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-top: calc(14px + 8 * (100vw / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-bottom: calc(14px + 8 * (100vw / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-right: calc(79px + 24 * (100vw / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-left: calc(35px + 15 * (100vw / 1440));
+  }
+
+  .newBrief__form__button input {
+    font-size: calc(12px + 2 * (100vw / 1440));
+  }
+
+  .newBrief__form__button span:first-of-type {
+    width: calc(44px + 19 * (100vw / 1440));
+  }
+
+  .newBrief__form__button::after {
+    right: calc(13px + 9 * (100vw / 1440));
+  }
 }
 
 @media (min-width: 1440px) {
@@ -5999,6 +6091,22 @@ h2,
 
   .newHeader .burgerBtn__burger {
     height: 60px;
+  }
+
+  .newHeader .bigMenu {
+    padding-top: 195px;
+  }
+
+  .newHeader .bigMenu {
+    padding-bottom: 147px;
+  }
+
+  .newHeader .bigMenu {
+    padding-left: 180px;
+  }
+
+  .newHeader .bigMenu {
+    padding-right: 48px;
   }
 
   .newHeader .bigMenu__content .bigNav .menu-item {
@@ -6691,6 +6799,87 @@ h2,
 
   .newContacts__row:nth-child(3) a {
     font-size: 30px;
+  }
+
+  .newBrief {
+    padding-top: 140px;
+  }
+
+  .newBrief {
+    padding-right: 180px;
+    padding-left: 180px;
+  }
+
+  .newBrief {
+    padding-bottom: 147px;
+  }
+
+  .newBrief__title {
+    font-size: 48px;
+  }
+
+  .newBrief__title {
+    margin-bottom: 40px;
+  }
+
+  .newBrief__form__title {
+    font-size: 18px;
+  }
+
+  .newBrief__form__title {
+    margin-top: 55px;
+  }
+
+  .newBrief__form__text {
+    margin-top: 7px;
+  }
+
+  .newBrief__form__text {
+    margin-bottom: 50px;
+  }
+
+  .newBrief__form__text {
+    font-size: 16px;
+  }
+
+  .newBrief__form__checkbox label {
+    font-size: 16px;
+  }
+
+  .newBrief__form__prices {
+    margin-top: 55px;
+  }
+
+  .newBrief__form__textarea {
+    margin-bottom: 50px;
+  }
+
+  .newBrief__form__button input {
+    padding-top: 22px;
+  }
+
+  .newBrief__form__button input {
+    padding-bottom: 22px;
+  }
+
+  .newBrief__form__button input {
+    padding-right: 103px;
+  }
+
+  .newBrief__form__button input {
+    padding-left: 50px;
+  }
+
+  .newBrief__form__button input {
+    font-size: 14px;
+  }
+
+  .newBrief__form__button span:first-of-type {
+    width: 63px;
+  }
+
+  .newBrief__form__button::after {
+    right: 22px;
   }
 }
 
@@ -7670,6 +7859,22 @@ h2,
     height: calc(35px + 42.5 * ((100vw - 320px) / 1440));
   }
 
+  .newHeader .bigMenu {
+    padding-top: calc(12px + 311.1 * ((100vw - 320px) / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-bottom: calc(24px + 209.1 * ((100vw - 320px) / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-left: calc(15px + 280.5 * ((100vw - 320px) / 1440));
+  }
+
+  .newHeader .bigMenu {
+    padding-right: calc(15px + 56.1 * ((100vw - 320px) / 1440));
+  }
+
   .newHeader .bigMenu__content .bigNav .menu-item {
     margin-bottom: calc(16px + 44.2 * ((100vw - 320px) / 1440));
   }
@@ -8363,6 +8568,87 @@ h2,
   .newContacts__row:nth-child(3) a {
     font-size: calc(12px + 30.6 * ((100vw - 320px) / 1440));
   }
+
+  .newBrief {
+    padding-top: calc(90px + 85 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief {
+    padding-right: calc(15px + 280.5 * ((100vw - 320px) / 1440));
+    padding-left: calc(15px + 280.5 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief {
+    padding-bottom: calc(90px + 96.9 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__title {
+    font-size: calc(24px + 40.8 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__title {
+    margin-bottom: calc(20px + 34 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__title {
+    font-size: calc(16px + 3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__title {
+    margin-top: calc(25px + 51 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__text {
+    margin-top: calc(0px + 11.9 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__text {
+    margin-bottom: calc(25px + 42.5 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__text {
+    font-size: calc(12px + 6.8 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__checkbox label {
+    font-size: calc(14px + 3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__prices {
+    margin-top: calc(30px + 42.5 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__textarea {
+    margin-bottom: calc(30px + 34 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-top: calc(14px + 13.6 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-bottom: calc(14px + 13.6 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-right: calc(79px + 40.8 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button input {
+    padding-left: calc(35px + 25.5 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button input {
+    font-size: calc(12px + 3.4 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button span:first-of-type {
+    width: calc(44px + 32.3 * ((100vw - 320px) / 1440));
+  }
+
+  .newBrief__form__button::after {
+    right: calc(13px + 15.3 * ((100vw - 320px) / 1440));
+  }
 }
 
 @media (max-width: 767px) and (max-width: 767px) {
@@ -8543,7 +8829,7 @@ h2,
   .newHeader .bigMenu__content .newHeader__contactBtn {
     position: absolute;
     left: 0;
-    bottom: 0;
+    top: calc(100% - 75px);
   }
 
   .newSingleHead {
@@ -8862,6 +9148,62 @@ h2,
   .newOnePost__wrapper ul,
   .newOnePost__wrapper ol {
     margin-bottom: calc(20px + 0 * ((100vw - 320px) / 1440));
+  }
+}
+
+@media (max-width: 520px) {
+  .newBrief__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .newBrief__form .slick-arrow {
+    height: 35px;
+    font-size: 12px;
+  }
+
+  .newBrief__form .slick-arrow::before {
+    height: 35px;
+    width: 35px;
+  }
+
+  .newBrief__form .slick-prev {
+    padding-left: 45px;
+  }
+
+  .newBrief__form .slick-prev::after {
+    left: 12px;
+  }
+
+  .newBrief__form .slick-next {
+    padding-right: 45px;
+  }
+
+  .newBrief__form .slick-next::after {
+    right: 12px;
+  }
+
+  .newBrief__form__checkboxes {
+    grid-template-columns: 1fr;
+    padding-bottom: 20px;
+  }
+
+  .newBrief__form__checkbox label {
+    line-height: 1.33;
+  }
+
+  .newBrief__form__prices {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 30px;
+  }
+
+  .newBrief__form__personalInfo {
+    grid-template-columns: 1fr;
   }
 }
 
